--- a/CLongLib/CLongLib/CLongLib.csproj
+++ b/CLongLib/CLongLib/CLongLib.csproj
@@ -50,6 +50,7 @@
     <Compile Include="03Ingame\GameStartPacket.cs" />
     <Compile Include="03Ingame\MovePacket.cs" />
     <Compile Include="CommonPacket.cs" />
+    <Compile Include="PacketStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="02Lobby\QueuePacket.cs" />
   </ItemGroup>
