설계 변경 완? , shooting 관련 총알 생성 등 서버적용

--- a/CLongLib/CLongLib/CLongLib.csproj
+++ b/CLongLib/CLongLib/CLongLib.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="03Ingame\GameStartPacket.cs" />
     <Compile Include="03Ingame\MovePacket.cs" />
+    <Compile Include="03Ingame\ShootingPacket.cs" />
     <Compile Include="CommonPacket.cs" />
     <Compile Include="PacketStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
