--- a/CLongLib/CLongLib/CLongLib.csproj
+++ b/CLongLib/CLongLib/CLongLib.csproj
@@ -51,7 +51,8 @@
     <Compile Include="03Ingame\MovePacket.cs" />
     <Compile Include="03Ingame\ShootingPacket.cs" />
     <Compile Include="CommonPacket.cs" />
-    <Compile Include="PacketStructure.cs" />
+    <Compile Include="PacketDefinition.cs" />
+    <Compile Include="PacketMaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="02Lobby\QueuePacket.cs" />
   </ItemGroup>
