--- a/CLongLib/CLongLib/CLongLib.csproj
+++ b/CLongLib/CLongLib/CLongLib.csproj
@@ -48,8 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="03Ingame\GameStartPacket.cs" />
+    <Compile Include="03Ingame\HealthPacket.cs" />
     <Compile Include="03Ingame\MovePacket.cs" />
-    <Compile Include="03Ingame\ShootingPacket.cs" />
+    <Compile Include="03Ingame\WeaponPacket.cs" />
     <Compile Include="CommonPacket.cs" />
     <Compile Include="PacketDefinition.cs" />
     <Compile Include="PacketMaker.cs" />
