--- a/CLongLib/CLongLib/CLongLib.csproj
+++ b/CLongLib/CLongLib/CLongLib.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="03Ingame\GameStartPacket.cs" />
     <Compile Include="03Ingame\HealthPacket.cs" />
+    <Compile Include="03Ingame\MatchingPacket.cs" />
     <Compile Include="03Ingame\MovePacket.cs" />
     <Compile Include="03Ingame\WeaponPacket.cs" />
     <Compile Include="CommonPacket.cs" />
